@@ -15,8 +15,6 @@
  *
  * $Id$
  *
- * Copyright (C) 2005 Weston Schmidt <weston_schmidt@yahoo.com>
- * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation; either version 2 of the License, or
